# cargo-toml2

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  manifest.rs
