[package]
name = "cargo-toml2"
version = "1.3.1"
authors = ["Diana"]
edition = "2018"
exclude = [
    "src/main.rs" # Just for development testing. Nicer than cargo-test.
]
#
description = "`Cargo.toml` and `.cargo/config` parsing stuff"
keywords = ["cargo", "toml", "serde", "manifest"]
categories = [
    "rust-patterns",
    "parser-implementations",
    "development-tools::build-utils",
]
documentation = "https://docs.rs/cargo_toml2"
homepage = "https://github.com/DianaNites/cargo-toml2"
repository = "https://github.com/DianaNites/cargo-toml2"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = "1.0.82"
serde_derive = "1.0.82"
toml = "0.4.10"

[badges]
maintenance = { status = "as-is" }
